k8s/compendium-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compendium-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compendium-app
  template:
    metadata:
      labels:
        app: compendium-app
    spec:
      containers:
      # DB
      - name: compendium-db
        image: postgres
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: "0.5"
            memory: "4Gi"
          requests:
            cpu: "0.5"
            memory: "4Gi"
        volumeMounts:
        - name: database-volume
          mountPath: /var/lib/postgresql/data
      # BFF
      - name: compendium-bff
        image: ghakondratsky/compendium-bff
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "0.5"
            memory: "3Gi"
          requests:
            cpu: "0.5"
            memory: "3Gi"
      
      volumes:
      - name: database-volume
        persistentVolumeClaim:
          claimName: compendium-persistent-volume-claim
