k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: compendium-api-svc
spec:
  type: ClusterIP
  selector:
    app: compendium-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
